change hompage url in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vusic",
-  "homepage": "https://safanone8.github.io/Vusic-a-music-app/",
+  "homepage": "http://vusic.techstore.dev/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
